--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Week6</title>
+  <title>Pintxo Pop</title>
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.2/cerulean/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.min.css">
@@ -32,13 +32,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Week 7", "http://localhost:3000", :class => "navbar-brand" %>
+      <%= link_to "Pintxo Pop", "http://localhost:3000", :class => "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/products">Products</a></li>
+        <li><a href="/account">Sign Up</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/products">Menu</a></li>
+        <li><a href="/orders">Orders</a></li>
+        <li><a href="/location/search">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
